Add about activity

--- a/android.tree_mapper/app/src/main/AndroidManifest.xml
+++ b/android.tree_mapper/app/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activity.AboutActivity"
+            android:label="@string/action_about"/>
+
         <service
             android:name=".service.WSyncService"
             android:exported="true"
