--- a/android.tree_mapper/app/build.gradle
+++ b/android.tree_mapper/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:preference-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.vk:androidsdk:1.6.9'
 }
