--- a/android.tree_mapper/app/build.gradle
+++ b/android.tree_mapper/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.vk:androidsdk:1.6.9'
+    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
 }
