--- a/android.tree_mapper/app/build.gradle
+++ b/android.tree_mapper/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.nextgis.woody"
         minSdkVersion 9
@@ -10,16 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        archivesBaseName = "woody-$versionName"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    output.outputFile = new File(output.outputFile.parent, "woody-" + defaultConfig.versionName + ".apk")
-                }
-            }
             compileOptions {
                 sourceCompatibility JavaVersion.VERSION_1_7
                 targetCompatibility JavaVersion.VERSION_1_7
@@ -27,6 +23,9 @@ android {
         }
     }
     productFlavors {
+    }
+    lintOptions {
+        disable 'MissingTranslation'
     }
 }
 
