--- a/android.tree_mapper/app/src/main/AndroidManifest.xml
+++ b/android.tree_mapper/app/src/main/AndroidManifest.xml
@@ -69,8 +69,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".activity.MainActivity"
@@ -90,20 +89,21 @@
         <activity
             android:name=".activity.EditActivity"/>
 
+        <activity
+            android:name=".activity.ExpertsActivity"
+            android:label="@string/params_for_experts"/>
+
         <service
             android:name=".service.WSyncService"
             android:exported="true"
-            android:process=":sync"
-            >
+            android:process=":sync">
             <intent-filter>
                 <action
-                    android:name="android.content.SyncAdapter"
-                    />
+                    android:name="android.content.SyncAdapter"/>
             </intent-filter>
             <meta-data
                 android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter"
-                />
+                android:resource="@xml/syncadapter"/>
         </service>
 
         <provider
