--- a/android.tree_mapper/app/src/main/AndroidManifest.xml
+++ b/android.tree_mapper/app/src/main/AndroidManifest.xml
@@ -112,6 +112,16 @@
             android:exported="false"
             android:syncable="true"/>
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.easypicker.provider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
         <activity
             android:name="com.vk.sdk.VKServiceActivity"
             android:label="ServiceActivity"
