--- a/android.tree_mapper/build.gradle
+++ b/android.tree_mapper/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         google()
+        maven { url "https://dl.bintray.com/krazykira/maven" }
     }
 }
 
